add the logic for scanning mobile networks

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MNTR"
-        tools:targetApi="30">
+        android:theme="@style/Theme.MNTR">
         <activity
             android:name=".MainActivity"
             android:exported="true"
